iSO Safari で`background-attatchement: fixed; background-size: cover;` の背景画像が極端に拡大されるバグへの対応。  `-webkit-overflow-scrolling: touch;` での対応が上手く動作しなかったので `bowser` での対応に戻す。

--- a/src/scss/_plugins/safari/_safari.scss
+++ b/src/scss/_plugins/safari/_safari.scss
@@ -1,8 +1,7 @@
 @charset "utf-8";
 
 //キービジュアルのiOS Safari対策コードを出力
-@supports ( -webkit-overflow-scrolling: touch ) {
-    .eyecatch {
-        background-attachment: scroll;
-    }
+//bowserでUAにより付与。mobile Safariバグ対策
+body.mobileSafari .c-eyecatch {
+    background-attachment: scroll;
 }
